# magsimpyx

./: LICENSE  README.md  pyproject.toml
magsimpyx/: __init__.py  _version.py  apertures.py
